--- a/react-project-one/src/index.css
+++ b/react-project-one/src/index.css
@@ -11,6 +11,6 @@ body{
   justify-content: center;
   align-items: center;
   background-color: rgb(13, 22, 158);
-  color: white;
+  color: rgb(31, 153, 201);
   /* font-size: 5rem; */
 }
